--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".presentation.features.detail.WonderDetailActivity"></activity>
         <activity android:name=".presentation.features.wonderlist.WondersActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
