add room database with entity and dao

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,10 @@ dependencies {
 
     implementation presentationDependencies.lifecycle
 
+    implementation presentationDependencies.roomRuntime
+    implementation dataDependencies.roomRxJava2
+    kapt presentationDependencies.roomCompiler
+
     implementation presentationDependencies.glide
     kapt presentationDependencies.glideProcessor
     implementation presentationDependencies.recyclerView
