update loading style

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     kapt presentationDependencies.roomCompiler
 
     implementation presentationDependencies.glide
+    implementation presentationDependencies.shimmer
     kapt presentationDependencies.glideProcessor
     implementation presentationDependencies.recyclerView
 }
